--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 <body>
 
     <header uk-sticky="start: 200; animation: uk-animation-slide-top">
-        <div id="brand"><a href="/"><img src="https://images.squarespace-cdn.com/content/v1/6284281fe616481cac6e6bb4/e891834c-452c-4b2a-b51b-24e092f2b6b2/PROJEXEL+LOGO+0502b.png?format=1500w" alt="" style="width: 14rem ;"></a></div>
+        <div id="brand"><a href="index.html"><img src="https://images.squarespace-cdn.com/content/v1/6284281fe616481cac6e6bb4/e891834c-452c-4b2a-b51b-24e092f2b6b2/PROJEXEL+LOGO+0502b.png?format=1500w" alt="" style="width: 14rem ;"></a></div>
 
         <nav>
 
           <ul>
 
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/itservices.html" >IT Services</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="itservices.html" >IT Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
 
           </ul>
 
@@ -47,10 +47,10 @@
 
           <ul class="mobile-menu">
 
-            <li><a href="/">Home</a></li>
-            <li><a href="/about.html">About</a></li>
-            <li><a href="/itservices.html">IT Services</a></li>
-            <li><a href="/contact.html" >contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="itservices.html">IT Services</a></li>
+            <li><a href="contact.html" >contact</a></li>
 
             <li><a class="socialnet" href="https://mobile.twitter.com/LLCProjexel" target="_blank">Twitter</a></li>
             <li><a class="socialnet" href="https://www.linkedin.com/company/projexel-llc/about/" target="_blank">LinkedIn</a></li>
@@ -134,7 +134,7 @@
 
         <div class="section">
           <div class="uk-section-default">
-            <div class="uk-section uk-light uk-background-cover" uk-parallax="bgy: -50"  style="background-image: url(images/austin.jpg);">
+            <div class="uk-section uk-light uk-background-cover" uk-parallax="bgy: -50"  style="background-image: url(Images/austin.jpg);">
                 <div class="uk-container " >
  
                     <div class="uk-grid-match uk-child-width-1-3@m" uk-parallax="bgy: -200" uk-grid >
