--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 <body>
     
     <header uk-sticky="start: 200; animation: uk-animation-slide-top">
-        <div id="brand"><a href="/"><img src="https://images.squarespace-cdn.com/content/v1/6284281fe616481cac6e6bb4/e891834c-452c-4b2a-b51b-24e092f2b6b2/PROJEXEL+LOGO+0502b.png?format=1500w" alt="" style="width: 14rem ;"></a></div>
+        <div id="brand"><a href="index.html"><img src="https://images.squarespace-cdn.com/content/v1/6284281fe616481cac6e6bb4/e891834c-452c-4b2a-b51b-24e092f2b6b2/PROJEXEL+LOGO+0502b.png?format=1500w" alt="" style="width: 14rem ;"></a></div>
 
         <nav>
 
